--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@agm/core": "^1.0.0-beta.5",
     "@angular/cdk": "^9.0.0",
     "@angular/http": "~7.2.15",
+    "@angular/localize": "^9.1.13",
     "@angular/material": "^9.0.0",
     "@angular/platform-server": "^9.0.0",
     "@angular/router": "^9.0.0",
@@ -147,6 +148,6 @@
     "webpack-cli": "^4.4.0",
     "webpack-dev-middleware": "^4.1.0",
     "webpack-dev-server": "^3.11.2",
-    "zone.js": "^0.11.3"
+    "zone.js": "^0.11.4"
   }
 }
