--- a/package.json
+++ b/package.json
@@ -85,7 +85,6 @@
     "ngx-color-picker": "^7.0.0",
     "ngx-echarts": "^4.0.0",
     "ngx-perfect-scrollbar": "^6.3.1",
-    "node-sass": "^4.12.0",
     "nvd3": "^1.8.6",
     "peity": "^3.3.0",
     "raphael": "^2.2.7",
@@ -137,6 +136,7 @@
     "karma-jasmine-html-reporter": "^1.5.4",
     "protractor": "^7.0.0",
     "rxjs-tslint": "^0.1.8",
+    "sass": "^1.49.7",
     "ts-node": "~7.0.0",
     "tslint": "^6.1.3",
     "typescript": "3.8.3",
