--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@agm/core": "^1.0.0-beta.5",
     "@angular/cdk": "^9.0.0",
     "@angular/http": "~7.2.15",
+    "@angular/localize": "^9.1.13",
     "@angular/material": "^9.0.0",
     "@angular/platform-server": "^9.0.0",
     "@angular/router": "^9.0.0",
