--- a/package.json
+++ b/package.json
@@ -20,131 +20,131 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^1.0.0-beta.5",
-    "@angular/cdk": "^9.0.0",
+    "@agm/core": "^3.0.0-beta.0",
+    "@angular/cdk": "^13.2.2",
     "@angular/http": "~7.2.15",
-    "@angular/localize": "^9.1.13",
-    "@angular/material": "^9.0.0",
-    "@angular/platform-server": "^9.0.0",
-    "@angular/router": "^9.0.0",
-    "@iplab/ngx-file-upload": "^1.4.1",
-    "@ks89/angular-modal-gallery": "^6.3.0",
-    "@ng-bootstrap/ng-bootstrap": "^4.2.2",
-    "@nicky-lenaers/ngx-scroll-to": "*1.1.1",
-    "adm-zip": "^0.4.16",
-    "amazing-time-picker": "^1.5.3",
+    "@angular/localize": "^13.2.2",
+    "@angular/material": "^13.2.2",
+    "@angular/platform-server": "^13.2.2",
+    "@angular/router": "^13.2.2",
+    "@iplab/ngx-file-upload": "^4.0.0",
+    "@ks89/angular-modal-gallery": "^9.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^12.0.0",
+    "@nicky-lenaers/ngx-scroll-to": "9.0.0",
+    "adm-zip": "^0.5.9",
+    "amazing-time-picker": "^1.8.0",
     "angular-6-datatable": "*0.8.0",
-    "angular-datatables": "*6.0.1",
-    "angular-dual-listbox": "^4.7.0",
+    "angular-datatables": "13.0.1",
+    "angular-dual-listbox": "^6.0.0",
     "angular-highcharts-chart": "^1.0.2",
-    "angular-morris-js": "^1.1.0",
+    "angular-morris-js": "^2.0.1",
     "angular-pell": "^0.1.0",
     "angular2-chartjs": "^0.5.1",
     "angular2-text-mask": "^9.0.0",
     "angular2-tinymce": "^3.3.0",
-    "axios": "^0.21.1",
-    "bootstrap": "^4.1.3",
-    "core-js": "^3.8.3",
-    "crypto-js": "^3.1.9-1",
-    "css-animator": "^2.3.1",
-    "d3": "^3.5.17",
-    "datatables.net": "^1.10.19",
-    "datatables.net-bs4": "^1.10.20",
-    "datatables.net-buttons": "^1.5.4",
-    "datatables.net-buttons-dt": "^1.5.4",
-    "datatables.net-colreorder": "^1.5.1",
-    "datatables.net-colreorder-dt": "^1.5.1",
-    "datatables.net-dt": "^1.10.19",
-    "datatables.net-responsive": "^2.2.3",
-    "datatables.net-responsive-dt": "^2.2.3",
-    "datatables.net-select": "^1.2.7",
-    "datatables.net-select-dt": "^1.2.7",
-    "echarts": "^4.2.0-rc.2",
+    "axios": "^0.26.0",
+    "bootstrap": "^5.1.3",
+    "core-js": "^3.21.0",
+    "crypto-js": "^4.1.1",
+    "css-animator": "^2.4.0",
+    "d3": "^7.3.0",
+    "datatables.net": "^1.11.4",
+    "datatables.net-bs4": "^1.11.4",
+    "datatables.net-buttons": "^2.2.2",
+    "datatables.net-buttons-dt": "^2.2.2",
+    "datatables.net-colreorder": "^1.5.5",
+    "datatables.net-colreorder-dt": "^1.5.5",
+    "datatables.net-dt": "^1.11.4",
+    "datatables.net-responsive": "^2.2.9",
+    "datatables.net-responsive-dt": "^2.2.9",
+    "datatables.net-select": "^1.3.4",
+    "datatables.net-select-dt": "^1.3.4",
+    "echarts": "^5.3.0",
     "famfamfam-flags": "^1.0.0",
-    "fullcalendar": "^3.9.0",
+    "fullcalendar": "^5.10.2",
     "hammerjs": "^2.0.8",
-    "highcharts": "^7.2.2",
-    "ic-datepicker": "*0.1.3",
-    "jszip": "^3.1.5",
-    "moment": "^2.22.2",
+    "highcharts": "^9.3.3",
+    "ic-datepicker": "0.1.6",
+    "jszip": "^3.7.1",
+    "moment": "^2.29.1",
     "morris.js": "^0.5.0",
-    "mousetrap": "^1.6.2",
-    "ng-click-outside": "^4.0.0",
+    "mousetrap": "^1.6.5",
+    "ng-click-outside": "^9.0.0",
     "ng-fullcalendar": "^1.6.2",
-    "ng-number-formatter": "^1.5.0",
-    "ng-select": "^1.0.0",
+    "ng-number-formatter": "^3.2.1",
+    "ng-select": "^1.0.2",
     "ng2-archwizard": "^2.1.0",
-    "ng2-currency-mask": "^5.3.1",
-    "ng2-dragula": "^1.5.0",
-    "ng2-google-charts": "^3.4.0",
+    "ng2-currency-mask": "^13.0.3",
+    "ng2-dragula": "^2.1.1",
+    "ng2-google-charts": "^7.0.0",
     "ng2-nvd3": "^2.0.0",
     "ng2-toasty": "^4.0.3",
     "ng2-validation": "^4.2.0",
-    "ngx-bar-rating": "^1.1.0",
-    "ngx-chips": "*1.9.8",
-    "ngx-clipboard": "^12.2.1",
-    "ngx-color-picker": "^7.0.0",
-    "ngx-echarts": "^4.0.0",
-    "ngx-perfect-scrollbar": "^6.3.1",
+    "ngx-bar-rating": "^3.0.0",
+    "ngx-chips": "3.0.0",
+    "ngx-clipboard": "^15.0.1",
+    "ngx-color-picker": "^12.0.0",
+    "ngx-echarts": "^8.0.1",
+    "ngx-perfect-scrollbar": "^10.1.1",
     "nvd3": "^1.8.6",
     "peity": "^3.3.0",
-    "raphael": "^2.2.7",
-    "rxjs": "^6.6.3",
-    "rxjs-compat": "^6.3.3",
-    "screenfull": "^3.3.3",
-    "sweetalert2": "^7.28.7",
-    "tinymce": "^5.6.0",
-    "tslib": "^1.10.0"
+    "raphael": "^2.3.0",
+    "rxjs": "^7.5.4",
+    "rxjs-compat": "^6.6.7",
+    "screenfull": "^6.0.1",
+    "sweetalert2": "^11.4.0",
+    "tinymce": "^5.10.3",
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.900.1",
-    "@angular/animations": "^9.0.0",
-    "@angular/cli": "^9.0.0",
-    "@angular/common": "^9.0.0",
-    "@angular/compiler": "^9.0.0",
-    "@angular/compiler-cli": "^9.0.0",
-    "@angular/core": "^9.0.0",
-    "@angular/forms": "^9.0.0",
-    "@angular/language-service": "^9.0.0",
-    "@angular/platform-browser": "^9.0.0",
-    "@angular/platform-browser-dynamic": "^9.0.0",
-    "@types/adm-zip": "^0.4.33",
-    "@types/datatables.net": "^1.10.18",
-    "@types/datatables.net-buttons": "^1.4.3",
-    "@types/datatables.net-select": "^1.2.6",
-    "@types/hammerjs": "^2.0.37",
-    "@types/jasmine": "^3.6.3",
-    "@types/jasminewd2": "^2.0.8",
-    "@types/jquery": "^3.3.31",
-    "@types/mousetrap": "^1.6.5",
-    "@types/node": "^14.14.22",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
-    "codelyzer": "^6.0.1",
-    "electron": "^11.2.1",
+    "@angular-devkit/build-angular": "^13.2.3",
+    "@angular/animations": "^13.2.2",
+    "@angular/cli": "^13.2.3",
+    "@angular/common": "^13.2.2",
+    "@angular/compiler": "^13.2.2",
+    "@angular/compiler-cli": "^13.2.2",
+    "@angular/core": "^13.2.2",
+    "@angular/forms": "^13.2.2",
+    "@angular/language-service": "^13.2.2",
+    "@angular/platform-browser": "^13.2.2",
+    "@angular/platform-browser-dynamic": "^13.2.2",
+    "@types/adm-zip": "^0.4.34",
+    "@types/datatables.net": "^1.10.21",
+    "@types/datatables.net-buttons": "^1.4.7",
+    "@types/datatables.net-select": "^1.2.7",
+    "@types/hammerjs": "^2.0.41",
+    "@types/jasmine": "^3.10.3",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/jquery": "^3.5.13",
+    "@types/mousetrap": "^1.6.9",
+    "@types/node": "^17.0.18",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
+    "codelyzer": "^6.0.2",
+    "electron": "^17.0.1",
     "electron-installer-dmg": "^3.0.0",
-    "electron-packager": "^15.2.0",
-    "electron-winstaller": "^4.0.0",
-    "eslint": "^7.20.0",
-    "html-webpack-plugin": "^4.5.1",
-    "jasmine-core": "^3.6.0",
-    "jasmine-spec-reporter": "^6.0.0",
-    "karma": "^6.0.2",
-    "karma-chrome-launcher": "^3.1.0",
+    "electron-packager": "^15.4.0",
+    "electron-winstaller": "^5.0.0",
+    "eslint": "^8.9.0",
+    "html-webpack-plugin": "^5.5.0",
+    "jasmine-core": "~4.0.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.3.16",
+    "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "^2.0.0",
-    "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-jasmine": "^4.0.1",
-    "karma-jasmine-html-reporter": "^1.5.4",
-    "protractor": "^7.0.0",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~4.0.1",
+    "karma-jasmine-html-reporter": "^1.7.0",
+    "protractor": "~7.0.0",
     "rxjs-tslint": "^0.1.8",
     "sass": "^1.49.7",
-    "ts-node": "~7.0.0",
-    "tslint": "^6.1.3",
-    "typescript": "3.8.3",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^4.4.0",
-    "webpack-dev-middleware": "^4.1.0",
-    "webpack-dev-server": "^3.11.2",
-    "zone.js": "^0.11.3"
+    "ts-node": "~10.5.0",
+    "tslint": "~6.1.0",
+    "typescript": "4.5.5",
+    "webpack": "^5.69.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-middleware": "^5.3.1",
+    "webpack-dev-server": "^4.7.4",
+    "zone.js": "^0.11.4"
   }
 }
