--- a/package.json
+++ b/package.json
@@ -21,16 +21,17 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^3.0.0-beta.0",
-    "@angular/cdk": "^13.2.2",
+    "@angular/cdk": "^13.2.3",
     "@angular/http": "~7.2.15",
     "@angular/localize": "^13.2.2",
-    "@angular/material": "^13.2.2",
+    "@angular/material": "^13.2.3",
     "@angular/platform-server": "^13.2.2",
     "@angular/router": "^13.2.2",
     "@iplab/ngx-file-upload": "^4.0.0",
     "@ks89/angular-modal-gallery": "^9.0.1",
     "@ng-bootstrap/ng-bootstrap": "^12.0.0",
     "@nicky-lenaers/ngx-scroll-to": "9.0.0",
+    "@popperjs/core": "^2.11.2",
     "adm-zip": "^0.5.9",
     "amazing-time-picker": "^1.8.0",
     "angular-6-datatable": "*0.8.0",
@@ -44,7 +45,7 @@
     "angular2-tinymce": "^3.3.0",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
-    "core-js": "^3.21.0",
+    "core-js": "^3.21.1",
     "crypto-js": "^4.1.1",
     "css-animator": "^2.4.0",
     "d3": "^7.3.0",
