--- a/package.json
+++ b/package.json
@@ -70,8 +70,7 @@
     "moment": "^2.29.1",
     "morris.js": "^0.5.0",
     "mousetrap": "^1.6.5",
-    "ng-click-outside": "^9.0.0",
-    "ng-fullcalendar": "^1.6.2",
+    "ng-click-outside2": "^10.0.4",
     "ng-number-formatter": "^3.2.1",
     "ng-select": "^1.0.2",
     "ng2-archwizard": "^2.1.0",
@@ -143,7 +142,7 @@
     "ts-node": "~10.5.0",
     "tslint": "~6.1.0",
     "typescript": "4.5.5",
-    "webpack": "^5.69.0",
+    "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-middleware": "^5.3.1",
     "webpack-dev-server": "^4.7.4",
