--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   "private": true,
   "dependencies": {
     "@angular/cdk": "^13.2.3",
-    "@angular/localize": "^13.2.2",
+    "@angular/localize": "^13.2.3",
     "@angular/material": "^13.2.3",
-    "@angular/platform-server": "^13.2.2",
-    "@angular/router": "^13.2.2",
+    "@angular/platform-server": "^13.2.3",
+    "@angular/router": "^13.2.3",
     "@ng-bootstrap/ng-bootstrap": "^12.0.0",
     "@popperjs/core": "^2.11.2",
     "adm-zip": "^0.5.9",
@@ -34,6 +34,7 @@
     "angular2-text-mask": "^9.0.0",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
+    "codelyzer": "^6.0.2",
     "core-js": "^3.21.1",
     "crypto-js": "^4.1.1",
     "css-animator": "^2.4.0",
@@ -72,16 +73,16 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.2.3",
-    "@angular/animations": "^13.2.2",
+    "@angular/animations": "^13.2.3",
     "@angular/cli": "^13.2.3",
-    "@angular/common": "^13.2.2",
-    "@angular/compiler": "^13.2.2",
-    "@angular/compiler-cli": "^13.2.2",
-    "@angular/core": "^13.2.2",
-    "@angular/forms": "^13.2.2",
-    "@angular/language-service": "^13.2.2",
-    "@angular/platform-browser": "^13.2.2",
-    "@angular/platform-browser-dynamic": "^13.2.2",
+    "@angular/common": "^13.2.3",
+    "@angular/compiler": "^13.2.3",
+    "@angular/compiler-cli": "^13.2.3",
+    "@angular/core": "^13.2.3",
+    "@angular/forms": "^13.2.3",
+    "@angular/language-service": "^13.2.3",
+    "@angular/platform-browser": "^13.2.3",
+    "@angular/platform-browser-dynamic": "^13.2.3",
     "@babel/plugin-bugfix-v8-spread-parameters-in-optional-chaining": "^7.16.7",
     "@types/adm-zip": "^0.4.34",
     "@types/datatables.net": "^1.10.21",
@@ -111,7 +112,7 @@
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
-    "sass": "^1.49.7",
+    "sass": "^1.49.8",
     "ts-node": "~10.5.0",
     "tslint": "~6.1.0",
     "typescript": "4.5.5",
