--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
   "scripts": {
     "ng": "ng",
     "start": "tsc main.ts && ng build --base-href ./ && electron --enable-logging .",
-    "build": "tsc main.ts && ng build --prod --aot --base-href ./ && electron .",
+    "build": "tsc main.ts && ng build --configuration production --aot --base-href ./ && electron .",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "package-mac": "tsc main.ts && ng build --prod --aot --base-href ./ && electron --enable-logging . && electron-packager . xcash-desktop-wallet --overwrite --platform=darwin --arch=x64 --prune=true --out=release-builds",
-    "create-installer-mac": "tsc main.ts && ng build --prod --aot --base-href ./ && electron . && electron-installer-dmg ./release-builds/xcash-desktop-wallet/app-darwin-x64/xcash-desktop-wallet.app xcash-desktop-wallet --out=release-builds --overwrite",
-    "package-win": "tsc main.ts && ng build --prod --aot --base-href ./ && electron . && electron-packager . xcash-desktop-wallet --overwrite --out=release-builds",
-    "create-installer-win": "tsc main.ts && ng build --prod --aot --base-href ./ && electron . && node installers/windows/createinstaller.js",
-    "package-linux": "tsc main.ts && ng build --prod --aot --base-href ./ && electron . && electron-packager . xcash-desktop-wallet --overwrite --out=release-builds",
+    "package-mac": "tsc main.ts && ng build --configuration production --aot --base-href ./ && electron --enable-logging . && electron-packager . xcash-desktop-wallet --overwrite --platform=darwin --arch=x64 --prune=true --out=release-builds",
+    "create-installer-mac": "tsc main.ts && ng build --configuration production --aot --base-href ./ && electron . && electron-installer-dmg ./release-builds/xcash-desktop-wallet/app-darwin-x64/xcash-desktop-wallet.app xcash-desktop-wallet --out=release-builds --overwrite",
+    "package-win": "tsc main.ts && ng build --configuration production --aot --base-href ./ && electron . && electron-packager . xcash-desktop-wallet --overwrite --out=release-builds",
+    "create-installer-win": "tsc main.ts && ng build --configuration production --aot --base-href ./ && electron . && node installers/windows/createinstaller.js",
+    "package-linux": "tsc main.ts && ng build --configuration production --aot --base-href ./ && electron . && electron-packager . xcash-desktop-wallet --overwrite --out=release-builds",
     "create-installer-linux": ""
   },
   "private": true,
